# ofb-python-sdk

./: .gitignore  CONTRIBUTING.md  EXAMPLE.md  README.md  pyproject.toml  setup.py
.github/workflows/: Build and upload.yaml
src/: example.py
src/ofb_python_sdk/: __init__.py  client.py
