[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sy-ofb-python-sdk"
dynamic = ["version"]
description = "A Python interface for interacting with Microsoft's OneDrive."
authors = [{name = "shingyu", email = "xing_yv@outlook.com"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests", "rich"]
keywords = ["one drive", "microsoft", "sdk", "api", "cloud", "ofb", "onedrive for business"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/shingyu/ofb-python-sdk"
documentation = "https://github.com/shingyu/ofb-python-sdk"
repository = "https://github.com/shingyu/ofb-python-sdk"
issues = "https://github.com/shingyu/ofb-python-sdk/issues"

[tool.setuptools_scm]
local_scheme = "no-local-version"
#write_to = "src/ofb_python_sdk/_version.py"
version_file = "src/ofb_python_sdk/_version.py"